added toastre notification system

--- a/src/index.html
+++ b/src/index.html
@@ -12,3 +12,15 @@
   <app-root></app-root>
 </body>
 </html>
+<style>
+#toast-container > div {
+    opacity:1;
+    margin-top:70px;
+}
+.toast{
+  opacity:1;
+  margin-top:70px;
+}
+
+
+</style>
